--- a/index.html
+++ b/index.html
@@ -12,8 +12,53 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <nav>
+    <div class="nav-container">
+      <div class="logo">
+        <a href="https://whslater.github.io" target="_blank" rel="noopener noreferrer"></a>
+      </div>        
+        <h1>BSP ALBUMS</h1>
+        <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer"></a></div>
+        <div class="nav-links mobile-hidden">
+<!--             <a onclick="scrollToSection('about')">ABOUT ME</a>
+
+            <div class="dropdown">          
+              <a class="dropbtn">Links ▾</a>
+              <div class="dropdown-content">
+                <a onclick="scrollToSection('td')">3D</a>
+                <a onclick="scrollToSection('unity')">Unity</a>
+                <a onclick="scrollToSection('gd')">Graphic Design</a>                             
+                <a onclick="scrollToSection('webdev')">Wed Development</a>
+                <a onclick="scrollToSection('photography')">Photography</a>
+              </div>
+            </div>              
+            <a onclick="scrollToSection('contact')">Contact</a> -->
+
+          </div>      
+          <label class="nav-links-dropdown-button mobile-show">
+            <input type="checkbox">
+          </label>
+          <aside class="sidebar mobile-show">
+<!--             <div><a onclick="scrollToSection('me')">About Me</a></div>
+
+            <div class = "dropdown-mobile-nav">          
+              <a class="dropbtn-mobile-nav">Services ▾</a>
+              <div class="dropdown-content-mobile-nav">
+                <a onclick="scrollToSection('td')">3D</a>
+                <a onclick="scrollToSection('unity')">Unity</a>
+                <a onclick="scrollToSection('gd')">Graphic Design</a>                             
+                <a onclick="scrollToSection('webdev')">Wed Development</a>
+                <a onclick="scrollToSection('photography')">Photography</a>
+              </div>
+            </div>
+            <div><a onclick="scrollToSection('contact')">Contact</a></div>              
+            <div class="icon-link" id="artstation"><a href="https://www.artstation.com/billy_schwenzer" target="_blank" rel="noopener noreferrer">ARTSTATION</a></div> -->
+            <div class= "icon-link" id="instagram"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></div>
+            
+          </aside>
+    </div>
+  </nav>
   <div class="wrapper">
-    <h1>ALBUMS</h1>
     <div id="album-list"></div>
     
     <!-- Modal -->
