--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
     <div class="nav-container">
       <div class="logo">
-        <a href="https://whslater.github.io" target="_blank" rel="noopener noreferrer"></a>
+        <a href="https://schwenz.uk" target="_blank" rel="noopener noreferrer"></a>
       </div>        
         <h1>BSP ALBUMS</h1>
         <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer"></a></div>
