--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <a href="https://schwenz.uk" target="_blank" rel="noopener noreferrer"></a>
       </div>        
-        <h1>BSP ALBUMS</h1>
+        <h1>SCHWENZ PHOTOS</h1>
         <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer"></a></div>
         <div class="nav-links mobile-hidden">
 <!--             <a onclick="scrollToSection('about')">ABOUT ME</a>
