--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BSP Photo Albums</title>
+  <title>Schwenz Photos</title>
   <link rel="shortcut icon" href="Assets/Images/SchwenzerLogo1.png">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
